<resources>
    <string name="start_button">Start</string>
    <string name="welcome_text">Animals Guide</string>
    <string name="change_language_button">Change Language</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="share">Share</string>

    <string name="animal_name_lion">Lion</string>
    <string name="animal_name_elephant">Elephant</string>
    <string name="animal_name_giraffe">Giraffe</string>
    <string name="animal_name_alligator">Alligator</string>
    <string name="animal_name_penguin">Penguin</string>
    <string name="animal_name_zebra">Zebra</string>
    <string name="animal_name_hippopotamus">Hippopotamus</string>
    <string name="animal_name_monkey">Monkey</string>

    <string name="animal_desc_lion">The lion is a carnivorous mammal from the cat family, known as the "king of the jungle. It lives in Africa and parts of India.</string>
    <string name="animal_desc_elephant">The elephant is the largest land mammal, with long tusks and a versatile trunk. It is mostly found in Africa and Asia.</string>
    <string name="animal_desc_giraffe">The giraffe is the tallest land animal, characterized by its long neck and spotted coat. It lives in the savannas of Africa. </string>
    <string name="animal_desc_alligator">The alligator is a carnivorous reptile that lives in freshwater and swamps, with sharp teeth and a powerful jaw. </string>
    <string name="animal_desc_penguin">The penguin is a flightless seabird that primarily lives in cold regions like Antarctica. It is known for its upright walk.</string>
    <string name="animal_desc_zebra">The zebra is an African mammal with black and white striped fur, living in herds and migrating across open plains.</string>
    <string name="animal_desc_hippopotamus">The hippopotamus is a large mammal that lives in freshwater in Africa, known for its big mouth and heavy body. </string>
    <string name="animal_desc_monkey">The monkey is an intelligent mammal with great climbing ability, living in tropical regions and known for its advanced social behavior.</string>

    <string name="error_missing_email">Please enter an email address</string>
    <string name="error_missing_password">Please enter a password</string>
    <string name="error_missing_email_password">Please enter both email and password</string>

    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="registration_successful">Registration successful</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="registration_failed">Registration failed </string>

    <string name="subject">Animal info</string>
    <string name="ask_Phone">Enter phone number:</string>
    <string name="ask_Email">Enter email address:</string>
    <string name="share_animal_info">Share Animal Info</string>
    <string name="share_via_sms">Share via SMS</string>
    <string name="share_via_email">Share via Email</string>
    <string name="share_name">Name:</string>
    <string name="share_description">Description:</string>
    <string name="share_cancel">Cancel</string>
    <string name="share_send">sent successfully</string>

    <string name="stop_music">Stop Music</string>
    <string name="play_music">Play Music</string>
    <string name="create_an_account">create an account</string>
    <string name="zoo_guide">Zoo Guide</string>
    <string name="welcome">Welcome!</string>
    <string name="click_on_me">click on me!</string>

</resources>
